Preparation for scheduling for presentation

--- a/index.html
+++ b/index.html
@@ -391,6 +391,8 @@
               <div class="content">
                 <div class="header">Inserted sequence:</div>
                 <div class="description" id="sv-modal-table-ins">
+                  Number of rows: <span id="return-row"></span> | 
+                  Number of clusters: <span id="return-cluster"></span>
                 </div>
               </div>
             </div>
